# KAgent

./: .cursorrules  .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
docs/: AI_MANIFEST.json  design.md  design_aop.md  upgrade-v2.md  upgrade-v3.md  upgrade-v4.md  usage.md
docs/modification/: 01_basic_chat_fixes.md  04_structured_output_fixes.md  07_structured_output_fixes.md
examples/: 01_basic_chat.py  02_tool_usage.py  03_streaming.py  04_structured_output.py  05_event_hooks.py  06_custom_state.py  07_steering.py  08_interrupt.py  09_interceptors.py  10_thinking.py  11_context_transform.py  12_self_correction.py
kagent/: __init__.py
kagent/_ai/: __init__.py
kagent/agent/: __init__.py  agent.py  config.py  interceptor.py  loop.py  prompt_builder.py  steering.py
kagent/common/: __init__.py  config.py  errors.py  logging.py  utils.py
kagent/context/: __init__.py  manager.py  state.py  transformer.py  window.py
kagent/domain/: __init__.py  entities.py  enums.py  events.py  model_types.py  protocols.py
kagent/events/: __init__.py  bus.py  filters.py  middleware.py  types.py
kagent/interface/: __init__.py  builder.py  hooks.py  kagent.py
kagent/models/: __init__.py  aicore_provider.py  anthropic_provider.py  base.py  config.py  converters.py  factory.py  gemini_provider.py  openai_compat.py  openai_provider.py
kagent/tools/: __init__.py  decorator.py  executor.py  registry.py  schema_gen.py
tests/: conftest.py  test_ai_bundle.py
tests/agent/: test_agent.py  test_interceptor.py  (+4 more)
(+26 files in other folders)
