[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kagent"
dynamic = ["version"]
description = "A clean-architecture Python agent framework with pub/sub scheduling"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
gemini = ["google-generativeai>=0.5"]
all = ["kagent[openai,anthropic,gemini]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.version]
path = "kagent/_version.py"

[tool.hatch.build.force-include]
"CLAUDE.md" = "kagent/_ai/CLAUDE.md"
"docs/AI_MANIFEST.json" = "kagent/_ai/AI_MANIFEST.json"
"examples" = "kagent/_ai/examples"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
